src/scss/postup/_airbnb-strengths.scss
.airbnb-strengths-container {
	display: flex;
	flex-direction: row;
	height: fit-content;
	align-items: start;
	justify-content: center;
	gap: 1rem;
	padding-top: 1rem;
	width: 100%;
	max-width: $content-max-width;
}

.img-airbnb-wrapper {
	display: none;
	width: 4rem;
	height: 4rem;
	align-items: flex-end;
	justify-content: flex-end;
	margin-left: 1.34rem;
}

.img-airbnb {
	max-width: none;
	width: 84.5px;
}

.airbnb-strengths-content-grid {
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	grid-template-rows: repeat(3, auto);
	row-gap: 1rem;
	column-gap: 0;
	margin: 0;
	width: 100%;

	div {
		display: flex;
		flex-direction: row;
		align-items: center;
		gap: 0.75rem;

		p {
			margin: 0;
			font-size: 0.889rem;
		}

		img {
			margin: 0;
		}
	}
}

.ic-airbnb-strengths-checkmark {
	display: flex;
	width: 1rem;
	height: 1rem;
}

@include breakpoint(med) {
	.airbnb-strengths-container {
		align-items: center;
		width: fit-content;
		padding: 1.75rem;
		gap: 2rem;
		border: 1px solid $medium-light-grey;
		border-radius: 10px;
	}

	.img-airbnb-wrapper {
		display: flex;
	}

	.airbnb-strengths-content-grid {
		grid-template-columns: repeat(2, 1fr);
		grid-template-rows: repeat(3, auto);
		row-gap: 1rem;
		column-gap: 2rem;

		div {
			gap: 1rem;
		}

		.ic-airbnb-strengths-checkmark {
			width: 1.25rem;
			height: 1.25rem;
		}

		div > p {
			font-size: 1.125rem;
		}
	}
}

@include breakpoint(lg) {
	.airbnb-strengths-container {
		flex-direction: row;
		gap: 3rem;
	}

	.airbnb-strengths-content-grid {
		column-gap: 2.5rem;
	}
}

